--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row flashes">
-<h4 class="cyan accent-3 center-align white-text">Contact us</h4> 
+<h4 class="cyan accent-3 center-align white-text header-shadow">Contact us</h4> 
 </div>
+<div id="contact-div">
 <p class="center-align" id="contact-info">
         Send an email to info@surabaya-kita.com<br/> 
         Or contact us using the form below:</p>
@@ -10,21 +11,21 @@
     <div class="row">
         <div class="col m10 offset-m1 s12">
             <div class="row">
-                <form class="col m8 offset-m2 s12">
+                <form class="col m8 offset-m2 s12" id="contact" onsubmit="return sendMail(this);">
                     <div class="row">
                         <div class="input-field col s12">
         <i class="fas fa-user prefix cyan-text text-accent-3"></i>
-                            <input id="name" type="text">
+                            <input type="text" id="name" placeholder="Name" name="name" required class="form-input">
                             <label for="name">Name</label>
                         </div>
                         <div class="input-field col s12">
         <i class="fas fa-envelope prefix cyan-text text-accent-3"></i>
-                            <input id="email" type="email" class="form-input">
+                            <input type="email" id="email" placeholder="email" name="email" required class="form-input">
                             <label for="email">Email</label>
                         </div>
                         <div class="input-field col s12">
                         <i class="fas fa-comment-dots prefix cyan-text text-accent-3"></i>
-                          <textarea id="message" class="materialize-textarea"></textarea>
+                          <textarea rows="4" id="message" placeholder="How can we help you?" name="help" required class="materialize-textarea"></textarea>
                           <label for="message">Message</label>
                         </div>
                     </div>
@@ -41,6 +42,6 @@
         </div>
     </div>	
 </div>
+</div>
         <div id="email-success"></div>
-
 {% endblock %}
