--- a/templates/events.html
+++ b/templates/events.html
@@ -65,19 +65,19 @@
                 <i class="fas fa-edit prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Event Description"></i>
                 {{ event.event_description }}<br>
-                <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
-                data-position="right" data-tooltip="Event Location"></i>
-                {{ event.location }}<br>
-                <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
-                data-position="right" data-tooltip="Meet Point"></i>
-                {{ event.meet_point }}<br>
                 <i class="fas fa-calendar-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Date of Event"></i>
                 {{ event.event_date }}<br>
                 <i class="fas fa-clock prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Time of Event"></i>
                 {{ event.event_time }}<br>
-                    {% if event.paid_event == "off" %}
+                <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Event Location"></i>
+                {{ event.location }}<br>
+                <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Meet Point"></i>
+                {{ event.meet_point }}<br>
+                    {% if event.free_event == "on" %}
                     <i class="fas fa-comment-dollar cyan-text text-accent-3 tooltipped sgl-event"
                      data-position="right" data-tooltip="Free!"></i>
                     Free event!<br>
