--- a/templates/my_events.html
+++ b/templates/my_events.html
@@ -9,7 +9,7 @@
 <div class="row">
   {% for event in events %}
     {% if session.user == event.created_by or session.user == "admin" %}  
-    <div class="col s12 m3">
+    <div class="col s12 m3 center-align valign-wrapper">
     <div class="card">
       <div class="card-image">
         {% if event.category_name == "Cycle" %}
@@ -49,37 +49,38 @@
         {% endif %}
         {% endif %} {% endif %}
         {% endif %} {% endif %}{% endif %}
-      <div class="card-content valign-wrapper center-align">
-        <p class="event-description">{{ event.event_description }}</p>
+      <div class="card-content valign-wrapper">
+        <p class="event-description center-align">{{ event.event_description }}</p>
       </div>
       <div class="card-content card-link-div center-align valign-wrapper">
-      <span class="card-title activator">{{ event.event_name }}
+      <span class="card-title activator center-align">{{ event.event_name }}
       <i class="fas fa-plus prefix white-text tooltipped" id="event-deets"
                 data-position="right" data-tooltip="Get Details"></i></span>
     </div>
       <div class="card-reveal">
-      <span class="card-title card-link-div center-align">{{ event.event_name }}
-      <i class="fas fa-times prefix white-text tooltipped right" id="event-deets-close"
-                data-position="right" data-tooltip="Close Details"></i></span>
-<p><i class="fas fa-list-ul prefix cyan-text text-accent-3 tooltipped sgl-event"
+        <span class="card-title card-link-div center-align">{{ event.event_name }}
+            <i class="fas fa-times prefix white-text tooltipped right" id="event-deets-close"
+            data-position="right" data-tooltip="Close Details"></i>
+            </span>
+                <p><i class="fas fa-list-ul prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Event Category"></i>
                 {{ event.category_name }}<br>
                 <i class="fas fa-edit prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Event Description"></i>
                 {{ event.event_description }}<br>
-                <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
-                data-position="right" data-tooltip="Event Location"></i>
-                {{ event.location }}<br>
-                <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
-                data-position="right" data-tooltip="Meet Point"></i>
-                {{ event.meet_point }}<br>
                 <i class="fas fa-calendar-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Date of Event"></i>
                 {{ event.event_date }}<br>
                 <i class="fas fa-clock prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Time of Event"></i>
                 {{ event.event_time }}<br>
-                    {% if event.paid_event == "off" %}
+                <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Event Location"></i>
+                {{ event.location }}<br>
+                <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Meet Point"></i>
+                {{ event.meet_point }}<br>
+                    {% if event.free_event == "on" %}
                     <i class="fas fa-comment-dollar cyan-text text-accent-3 tooltipped sgl-event"
                      data-position="right" data-tooltip="Free!"></i>
                     Free event!<br>
@@ -90,7 +91,16 @@
                     {% endif %}
                 <i class="fas fa-user prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Created by user"></i>
-                {{ event.created_by }}<br></p>    </div>
+                {{ event.created_by }}<br></p>    
+            </div>
+    <div class="edit-buttons">
+        <a href="{{ url_for('edit_event', event_id=event._id) }}" class="btn-large func-button cyan accent-4 text-shadow">          
+        Edit 
+        <i class="fas fa-edit right"></i></a>
+        <a href="{{ url_for('delete_event', event_id=event._id) }}" class="btn-large func-button light-green accent-4 text-shadow">
+        Delete 
+        <i class="fas fa-times-circle right"></i></a>
+    </div>
     </div>
   </div>
   {% endif %}
