added my profile and edit profile function

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -9,7 +9,10 @@
 <div class="row">
 	<div class="col s12 m8 offset-m2">
 		<div class="card-panel">
-            <p><i class="fas fa-user prefix cyan-text text-accent-3 tooltipped sgl-event"
+        <p><i class="fas fa-user-plus prefix cyan-text text-accent-3 tooltipped sgl-event"
+                data-position="right" data-tooltip="Username"></i>
+            {{ user.username }}<br>
+            <i class="fas fa-user prefix cyan-text text-accent-3 tooltipped sgl-event"
                 data-position="right" data-tooltip="Name"></i>
             {{ user.my_name }}<br>
             <i class="fas fa-map prefix cyan-text text-accent-3 tooltipped sgl-event"
@@ -19,7 +22,7 @@
             <!-- edit button -->
 <div class="row all-events-button">
         <div class="col s12 center-align">
-          <a href="{{ url_for('edit_profile', username=user.username) }}" class="btn-large light-green accent-2 all-events-button">
+          <a href="{{ url_for('edit_profile', user_id=user._id) }}" class="btn-large light-green accent-2 all-events-button">
         Edit Profile<i class="fas fa-edit right"></i></a>
         </div>
 </div>
