--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -32,7 +32,7 @@
 				<div class="input-field col s12">
                 <i class="fas fa-user prefix cyan-text text-accent-3"></i>
 					<input id="my_name" name="my_name" type="text" class="validate"
-                    minlength="5" maxlength="15" pattern="^[a-zA-Z]$" required>
+                    minlength="5" maxlength="50" pattern="^[a-zA-Z0-9 ]{5,15}$" required>
 					<label for="my_name" class="cyan-text text-accent-3">  Name</label>
 				</div>
 			</div>
