styled edit buttons

--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -104,11 +104,11 @@
         <!-- submit button -->
         <div class="row">
         <div class="col s12 center-align">
-          <button class="btn-large cyan accent-4 text-shadow" type="submit">
+          <button class="btn-large cyan accent-3" type="submit">
           Update 
     <i class="fas fa-edit right"></i>
     </button>
-    <a href="{{ url_for('my_events', username=session['user']) }}" class="btn-large light-green accent-4 text-shadow">
+    <a href="{{ url_for('my_events', username=session['user']) }}" class="btn-large light-green accent-4">
         Cancel<i class="fas fa-times-circle right"></i></a>
   
         </div>
