fixed bug with username when creating and editing events

--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -79,8 +79,8 @@ and we'll see what we can do! </p>
       <div class="row">
         <div class="input-field col s12">
           <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3"></i>
-          <textarea id="meet_point" name="meet_point" class="materialize-textarea validate" 
-          minlength="5" maxlength="50" required></textarea>
+          <input id="meet_point" name="meet_point" type="text" class="validate" 
+          minlength="5" maxlength="50" required>
           <label for="meet_point">Meet Point</label>
       </div>
       </div>
