--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -81,8 +81,8 @@
       <div class="row">
         <div class="input-field col s12">
           <i class="fas fa-map-marker-alt prefix cyan-text text-accent-3"></i>
-          <textarea id="meet_point" name="meet_point" class="materialize-textarea validate" 
-          minlength="5" maxlength="50" value="{{ event.meet_point }}"  required></textarea>
+          <input id="meet_point" name="meet_point" type="text" class="validate" 
+          minlength="5" maxlength="50" value="{{- event.meet_point -}}" required>
           <label for="meet_point">Meet Point</label>
       </div>
       </div>
