login and sign up btn styling

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,8 +24,8 @@
 				</div>
 			</div>
             <!-- register -->
-            <div class="row">
-            <button type="submit" class="col s12 btn-large cyan accent-3">
+            <div class="row center-align">
+            <button type="submit" class="btn-large cyan accent-3">
             LOGIN <i class="fas fa-sign-in-alt"></i></button>
             </div>
 		</div>
