--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -50,8 +50,8 @@
       </div>
   </div>     
   <!-- sign up new user -->
-            <div class="row">
-            <button type="submit" class="col s12 btn-large cyan accent-3">
+            <div class="row center-align">
+            <button type="submit" class="btn-large cyan accent-3">
             Sign Up <i class="fas fa-sign-in-alt"></i></button>
             </div>
 		</div>
