--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
 
+/* general layout, typogrpahy etc settings */
 body {
     font-family: 'Kumbh Sans', sans-serif;
 }
 p {
     padding: 10px 25px 10px;
     color: #808080;
+}
+.strong {
+    font-weight: 600;
 }
 .event-description {
     padding: 0px;
@@ -21,6 +25,16 @@ p {
 .white-text {
     color: white;
 }
+.btn-small {
+    margin: 5px;
+}
+.btn-large {
+    margin: 5px;
+}
+.btn {
+    margin: 5px;
+}
+/* header, navbar, flashes and search bar */
 #sby-kita {
     font-size: 44px;
     margin-left: 20px;
@@ -35,26 +49,14 @@ p {
     max-height: 95px;
     padding-left: 40px;
 }
-
 .flashes h4{
     line-height: 2;
 }
-
-.btn-small {
-    margin: 5px;
-}
-.btn-large {
-    margin: 5px;
-}
-.btn {
-    margin: 5px;
-}
-
 .collapsible-header .col strong {
     margin: 5px;
     line-height: 42px;
 }
-
+/* home page */
 .all-events-button {
     margin-top: 25px;
 }
@@ -75,6 +77,7 @@ div#cafe {
   background-repeat: no-repeat;
   background-size: cover;
 }
+/* managing categories */
 .event-category {
     background-color: #00e5ff ;
     color: white;
@@ -90,11 +93,9 @@ div#cafe {
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
     color: white;
 }
+/* events cards */
 .card-link-i {
     margin-left: 50px;
-}
-.card .card-content .card-title {
-    margin-bottom: 0px;
 }
 #sgl-event-title {
     padding: 20px;
@@ -129,6 +130,7 @@ div#cafe {
 }
 .card .card-content .card-title {
     color: white;
+    margin-bottom: 0px;
 }
 .card .card-reveal {
     padding: 0px;
@@ -146,6 +148,24 @@ div#cafe {
 }
 .func-button {
     margin: 10px;
+}
+/* profile */
+#monkey {
+    background-image: url("../images/monkey.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    height: 200px
+}
+#profile {
+    font-size: 18px;
+}
+#profile p {
+    padding: 10px;
+    margin: 5px;
+}
+.line {
+    border-bottom: 1px solid #00e5ff 
 }
 /* footer */
 .fixed {
@@ -217,7 +237,7 @@ ul.dropdown-content.select-dropdown li span {color: #00e5ff; }
 .timepicker-canvas line { stroke: #00e5ff !important; }
 .timepicker-canvas-bearing { fill: #00e5ff !important; }
 .timepicker-canvas-bg { fill: #00e5ff !important; }
-
+/* responsiveness */
 @media (max-width: 765px) {
 
 #sby-kita {
@@ -239,5 +259,8 @@ ul.dropdown-content.select-dropdown li span {color: #00e5ff; }
 .info-text {
     margin-top: -10px;
     font-size: 18px;
+}
+#profile {
+    padding: 12px;
 }
 }
