--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
             {% else %}
         <li><a href="{{ url_for('login') }}" class="waves-effect waves-light text-shadow light-green accent-2 btn">Log In</a></li>
         <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>
-               {% endif %}   
+               {% endif %}  
       </ul>
     </div> 
   </nav>
@@ -201,7 +201,8 @@ group discounted food and drink.</p>
 </div> -->
 <div class="col s12 l6 ">
 <div class="card">
-
+<h5> About Us</h5>
+<p>We is it.</p>
 </div>
 </div>
 <div class="col s12 l6 ">
