--- a/static/css/style.css
+++ b/static/css/style.css
@@ -218,7 +218,7 @@ ul.social > li > a > i {
 
 /* modified materialize css */
 
-.select-wrapper input.select-dropdown {color: white; font-size: 1rem; margin-left: 0px; }
+#no-filter.select-wrapper input.select-dropdown {color: white; font-size: 1rem; margin-left: 0px; }
 .select-wrapper .caret {fill: white; }
 ul.dropdown-content.select-dropdown li span {color: #00e5ff; }
 .switch label input[type=checkbox]:checked+.lever {
