--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 	<title>Surabaya Kita</title>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
     <script>
    (function(){
       emailjs.init("user_O4p1uzoCxjXWmUYNVNa1Y");
@@ -278,5 +280,6 @@ group discounted food and drink.</p>
 	</script>
     <script src="{{ url_for('static', filename='js/send-email.js') }}"></script>
         <script src="{{ url_for('static', filename='js/removeFormSuccess.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/delete.js') }}"></script>
 </body>
 </html>
