--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -6,8 +6,8 @@
 {% if session.user %}   
 <p>Fill in the form below to add your own event. Please fill in necessary additional details 
 in the event description, including any event fees or requirements and e.g distance / duration and pace for a bike ride or walk.
-If you don't think we have the right category yet for your event then please 
-<a href="{{ url_for('contact_us') }}" class="cyan-text text-accent-3">contact us</a> we can 
+If you don't think we have the right category or the right location for your event then please 
+<a href="{{ url_for('contact_us') }}" class="cyan-text text-accent-3">contact us</a>  
 and we'll see what we can do! </p> 
 <div class="container">
 <div class="card-panel grey lighten-5">
@@ -20,7 +20,7 @@ and we'll see what we can do! </p>
     <select id="category_name" name="category_name" class="validate" required>
       <option value="" disabled selected>Choose category</option>
       {% for category in categories %}
-        <option class="my-blue" value="{{ category.category_name }}">{{ category.category_name }}</option>
+        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
       {% endfor %}
     </select>
     <label for="category_name">Event Category</label>
