--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,14 @@ p {
 .flashes h4{
     line-height: 2;
 }
+#all-events-flash {
+    line-height: 2;
+    padding: 0px;
+}
+#all-events-flash h4 {
+    margin-left: auto;
+    margin-right: auto;
+}
 .collapsible-header .col strong {
     margin: 5px;
     line-height: 42px;
